--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
+    "@splinetool/runtime": "^1.9.67",
     "gsap": "^3.12.5",
     "lenis": "^1.1.13",
     "lil-gui": "^0.19.2",
